// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Author Profile test Render the authors profile as expected for a UQ researcher) 1`] = `
<ForwardRef(Card)>
  <ForwardRef(Grid)
    alignContent="center"
    alignItems="center"
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "title": "Professor",
            "uqr_id": 14,
          }
        }
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs={true}
    >
      <ForwardRef(Grid)
        container={true}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(DashboardAuthorDetails)
            familyName="Researcher"
            givenName="J"
            orgUnits={
              Array [
                "Institute for Molecular Bioscience",
                "Institute for Molecular Bioscience",
                "School of Chemistry and Molecular Biosciences",
                "The University of Queensland Diamantina Institute",
              ]
            }
            positions={
              Array [
                "Affiliate Professor",
                "Casual Affiliate Professor",
                "Affiliate Professorial Res Fellow",
                "ARC Australian Laureate Fellow",
              ]
            }
            title="Professor"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(DashboardResearcherIdsClass)
            authenticated={
              Object {
                "google_scholar": true,
                "orcid": true,
                "researcher": true,
                "scopus": true,
              }
            }
            history={Object {}}
            values={
              Object {
                "google_scholar": "kUemDfMAAAAJ",
                "orcid": "0000-0001-1111-1111",
                "researcher": "A-1137-2007",
                "scopus": "35478294000",
              }
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sx={
        Object {
          "display": Object {
            "md": "block",
            "xs": "none",
          },
        }
      }
      xs="auto"
    >
      <Connect(WithStyles(DashboardArticleCount)) />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Card)>
`;

exports[`Dashboard Author Profile test Renders empty div if there is no profile but profile image exists 1`] = `
<ForwardRef(Card)>
  <ForwardRef(Grid)
    alignContent="center"
    alignItems="center"
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "",
            "givenName": "",
            "title": "",
            "uqr_id": "",
          }
        }
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs={true}
    >
      <ForwardRef(Grid)
        container={true}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(DashboardAuthorDetails)
            familyName=""
            givenName=""
            title=""
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(DashboardResearcherIdsClass)
            authenticated={
              Object {
                "google_scholar": false,
                "orcid": false,
                "researcher": false,
                "scopus": false,
              }
            }
            history={Object {}}
            values={
              Object {
                "google_scholar": undefined,
                "orcid": undefined,
                "researcher": undefined,
                "scopus": "",
              }
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sx={
        Object {
          "display": Object {
            "md": "block",
            "xs": "none",
          },
        }
      }
      xs="auto"
    >
      <Connect(WithStyles(DashboardArticleCount)) />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Card)>
`;

exports[`Dashboard Author Profile test Renders empty div if there is no profile loaded 1`] = `
<div
  className="AuthorProfile empty"
/>
`;
